// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`className is added to the root element 1`] = `"pf-c-notification-drawer__header extra-class"`;

exports[`drawer header with count applied 1`] = `
<div>
  <div
    class="pf-c-notification-drawer__header"
  >
    <h1
      class="pf-c-notification-drawer__header-title"
      data-ouia-component-id="OUIA-Generated-Text-2"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Notifications
    </h1>
    <span
      class="pf-c-notification-drawer__header-status"
    >
      2 unread
    </span>
  </div>
</div>
`;

exports[`drawer header with custom unread text applied 1`] = `
<div>
  <div
    class="pf-c-notification-drawer__header"
  >
    <h1
      class="pf-c-notification-drawer__header-title"
      data-ouia-component-id="OUIA-Generated-Text-4"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Notifications
    </h1>
    <span
      class="pf-c-notification-drawer__header-status"
    >
      2 unread alerts
    </span>
  </div>
</div>
`;

exports[`drawer header with title applied 1`] = `
<div>
  <div
    class="pf-c-notification-drawer__header"
  >
    <h1
      class="pf-c-notification-drawer__header-title"
      data-ouia-component-id="OUIA-Generated-Text-3"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Notifications
    </h1>
  </div>
</div>
`;

exports[`renders with PatternFly Core styles 1`] = `
<div>
  <div
    class="pf-c-notification-drawer__header"
  >
    <h1
      class="pf-c-notification-drawer__header-title"
      data-ouia-component-id="OUIA-Generated-Text-1"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Notifications
    </h1>
  </div>
</div>
`;
